# emmett-assets

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
emmett_assets/: __init__.py  ext.py
emmett_assets/webassets/: bundle.py  env.py
emmett_assets/webassets/filter/: __init__.py  compass.py  jade.py  less.py  node_sass.py  replace.py  sass.py  slimit.py
